<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WorkoutLog</string>
    <string name="password" tools:ignore="DuplicateDefinition">Password</string>
    <string name="login">Login</string>
    <string name="enter_email">Email</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="password_one">Password</string>
    <string name="first_name">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">SignUp</string>
    <string name="login_activity"><u>Login</u> </string>
    <string name="plan">Plan</string>
    <string name="track">Track</string>
    <string name="person">Person</string>
    <string name="welcome_back">Welcome back</string>
    <string name="already_have_an_account">Already have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="plan_fragment">PLAN FRAGMENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="profile_fragment">PROFILE FRAGMENT</string>
    <string name="track_fragment">TRACK FRAGMENT</string>
</resources>